syntax = "proto3";

enum TaskStatus {
  PENDING = 0;
  ASSIGNED = 1;
  ACCEPTED = 2;  
  REJECTED = 3; 
  COMPLETED = 4;
}

message Task {
  string task_id = 1;
  string title = 2;
  string created_at = 3;
  uint64 reward = 4;
  string template = 5;
  TaskStatus status = 6;
  optional string result = 7;
}


